# git-co-evg-base

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  gh-pages-publish-linux  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  test.yml
categories/: index.html  index.xml
categories/page/1/: index.html
concepts/: index.html  index.xml
concepts/actions/: index.html
concepts/criteria/: index.html
concepts/criteria_application/: index.html
concepts/limiting_search_time/: index.html
concepts/reusing_criteria/: index.html
concepts/sharing_criteria/: index.html
docs/: usage.md
getting-started/: index.html  index.xml
getting-started/getting_help/: index.html
getting-started/installation/: index.html
getting-started/prerequisites/: index.html
goodbase-docs/: config.toml
goodbase-docs/content/: _index.md
goodbase-docs/content/concepts/: _index.md  actions.md  criteria.md  criteria_application.md  limiting_search_time.md  reusing_criteria.md  sharing_criteria.md
goodbase-docs/content/getting-started/: _index.md  getting_help.md  installation.md  prerequisites.md
goodbase-docs/content/project-history/: _index.md
project-history/: index.html  index.xml
project-history/CHANGELOG/: index.html
search/: en.config.min.json  en.data.min.json
src/goodbase/: build_checker.py  goodbase_cli.py  goodbase_options.py
src/goodbase/models/: build_status.py
src/goodbase/services/: config_service.py  criteria_service.py  evg_service.py  file_service.py  git_service.py  search_service.py
tags/: index.html  index.xml
tags/page/1/: index.html
tests/goodbase/: test_build_checker.py  test_goodbase_cli.py
tests/goodbase/models/: test_build_status.py  test_bulid_status.py
tests/goodbase/services/: test_config_service.py  test_criteria_service.py  test_evg_service.py  test_git_service.py  test_search_service.py
